cilium_network/gateway/03-gateway-apps.yml
---
# Приложение 1
apiVersion: v1
kind: Pod
metadata:
  name: app1
  labels:
    app.kubernetes.io/name: &name1 app1
    app.kubernetes.io/version: &version "1.27.5"
spec:
  containers:
  - name: nginx
    image: nginx:1.27.5
    ports:
      - containerPort: 80
        name: http
        protocol: TCP
    volumeMounts:
    - name: html
      mountPath: /usr/share/nginx/html
    resources:
      limits:
        memory: "128Mi"
        cpu: "200m"
      requests:
        memory: "64Mi"
        cpu: "100m"
  volumes:
  - name: html
    emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: app1-svc
  labels:
    app.kubernetes.io/name: &name1 app1
spec:
  selector:
    app.kubernetes.io/name: *name1
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  type: ClusterIP
---
# Приложение 2
apiVersion: v1
kind: Pod
metadata:
  name: app2
  labels:
    app.kubernetes.io/name: &name2 app2
    app.kubernetes.io/version: &version "1.27.5"
spec:
  containers:
  - name: nginx
    image: nginx:1.27.5
    ports:
      - containerPort: 80
        name: http
        protocol: TCP
    volumeMounts:
    - name: html
      mountPath: /usr/share/nginx/html
    resources:
      limits:
        memory: "128Mi"
        cpu: "200m"
      requests:
        memory: "64Mi"
        cpu: "100m"
  volumes:
  - name: html
    emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: app2-svc
  labels:
    app.kubernetes.io/name: &name2 app2
spec:
  selector:
    app.kubernetes.io/name: *name2
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  type: ClusterIP
