cilium_network/gateway/04-gateway-multi-route.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app1-route
spec:
  parentRefs:
  - name: cilium-gateway
  hostnames:
  - "test1.rogov.lan"
  rules:
  - matches:
      - path:
          type: PathPrefix
          value: "/"
    backendRefs:
    - name: app1-svc
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app2-route
spec:
  parentRefs:
  - name: cilium-gateway
  hostnames:
  - "test2.rogov.lan"
  rules:
  - matches:
      - path:
          type: PathPrefix
          value: "/"
    backendRefs:
    - name: app2-svc
      port: 80
