cilium_network/gateway/05-path-route.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: path-route
spec:
  parentRefs:
  - name: cilium-gateway
  hostnames:
  - "test3.rogov.lan"
  rules:
  - matches:
      - path:
          type: PathPrefix
          value: "/app1"
    backendRefs:
      - name: app1-svc
        port: 80
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: "/"
  - matches:
      - path:
          type: PathPrefix
          value: "/app2"
    backendRefs:
      - name: app2-svc
        port: 80
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: "/"
