cilium_network/gateway/06-header-route.yml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: header-route
spec:
  parentRefs:
  - name: cilium-gateway
  hostnames:
  - "test4.rogov.lan"
  rules:
  - matches:
      - headers:
          - name: X-version
            value: v2
    backendRefs:
      - name: app2-svc
        port: 80
  - backendRefs:
      - name: app1-svc
        port: 80
